--- a/src/css/index.css
+++ b/src/css/index.css
@@ -9,7 +9,7 @@
   --color-text-secondary: #2d3748; /*gray 800*/
   --color-text-nav: #fff; /*white*/
   --color-text-button: #fff; /*white*/
-  --color-text-link: #dd6b20; /*orange 600*/
+  --color-text-link: #7b341e; /*orange 900*/
   --color-text-link-secondary: #ed8936; /*orange 600*/
 }
 
