--- a/src/css/index.css
+++ b/src/css/index.css
@@ -27,6 +27,14 @@
   background-color: #1a202c;
 }
 
+@font-face {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 100 900;
+  font-display: swap;
+  src: url(/fonts/inter-var-latin.woff2) format('woff2');
+}
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
